@@ -13,6 +13,7 @@
 "OPTIONS_LIMIT","More trees","Options tab title."
 "UI_OPTIONS","User interface","Options panel header."
 "TRANSPARENT_UI","Use transparent button backgrounds","Checkbox in options panel."
+"RESET_POS","Reset button positions","Button in options panel."
 "LOAD_OPTIONS","Loading actions","Options panel header."
 "NETWORK_OVERLAP","Trees under networks","Options panel menu title."
 "BUILDING_OVERLAP","Trees under buildings","Options panel menu title."
